tests/machine/x/cpp/len_builtin.error
line 7: ../../../tests/machine/x/cpp/len_builtin.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/len_builtin.cpp:7:35: error: request for member ‘size’ in ‘__tmp1’, which is of non-class type ‘long unsigned int’
    7 |     for (size_t i = 0; i < __tmp1.size(); ++i) {
      |                                   ^~~~
../../../tests/machine/x/cpp/len_builtin.cpp:10:44: error: invalid types ‘long unsigned int[size_t {aka long unsigned int}]’ for array subscript
   10 |       std::cout << std::boolalpha << __tmp1[i];
      |                                            ^

  6 |     auto __tmp1 = std::vector<decltype(1)>{1, 2, 3}.size();
  7 |     for (size_t i = 0; i < __tmp1.size(); ++i) {
  8 |       if (i)
